web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-outside-async/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,23)
1|function f(x) { await x }
 |                     ^
